<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.PrimeiroFragment">

    <TextView
        android:id="@+id/tv_primeiro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/primeiro_fragmento"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_parametro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_parametro"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_primeiro"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_digite_um_num"
        android:layout_margin="20dp"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/tv_parametro"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/et_boolean"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_digite_true_ou_false"
        android:layout_margin="20dp"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/et_num"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/botao_ir_segundo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_botao_ir_para_segundo_fragmento"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/et_boolean"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/botao_ir_terceiro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_botao_ir_para_terceiro_fragmento"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/botao_ir_segundo"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>